; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsrun.c_js_eval.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsrun.c_js_eval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"(eval)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @js_eval(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @js_isstring(i32* %3, i32 -1)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %18

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @js_tostring(i32* %9, i32 -1)
  %11 = call i32 @js_loadeval(i32* %8, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @js_rot2pop1(i32* %12)
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @js_copy(i32* %14, i32 0)
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @js_call(i32* %16, i32 0)
  br label %18

18:                                               ; preds = %7, %6
  ret void
}

declare dso_local i32 @js_isstring(i32*, i32) #1

declare dso_local i32 @js_loadeval(i32*, i8*, i32) #1

declare dso_local i32 @js_tostring(i32*, i32) #1

declare dso_local i32 @js_rot2pop1(i32*) #1

declare dso_local i32 @js_copy(i32*, i32) #1

declare dso_local i32 @js_call(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
